--- a/index.html
+++ b/index.html
@@ -172,8 +172,10 @@
 						// Create an array of typing text
 						const typingTexts = [
 						'Data Visualization Expert  ',
-						'Programmar  ',
+						'DS Enthusiast  ',
 						'Data Analyst   ',
+						'Visualizer  ',
+						'AI | ML Analyst   ',
 						];
 
 						// Create a function to display the typing animation for a given text
