--- a/index.html
+++ b/index.html
@@ -405,10 +405,10 @@
             <p>Junio Data Analyst with 1+ years of experience driving business strategies through data-driven insights. Proven expertise in data Analytics, statistical analysis, machine learning algorithms and project management.</p>
 			<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="https://drive.google.com/file/d/1T3z72wjtFtQ3v-VCO69ZBMty9fthb9lc/view?usp=sharing" class="btn btn-primary py-4 px-5">Download Resume</a></p>
+    				<p><a href="https://drive.google.com/file/d/18IM48_9NyS_xjB2ThfAVhe7voehf3pkq/view?usp=sharing" class="btn btn-primary py-4 px-5">Download Resume</a></p>
     			</div>
 				<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="https://drive.google.com/file/d/1T3z72wjtFtQ3v-VCO69ZBMty9fthb9lc/view?usp=sharing" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<p><a href="https://drive.google.com/file/d/1F6OmRxeP9bQaigtGBMpPjqi1LoQDBQKA/view?usp=sharing" class="btn btn-primary py-4 px-5">Download CV</a></p>
     			</div>
     		</div>  
 		</div>
@@ -1065,7 +1065,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="#">resumelink</a></p>
+	            <p><a href="https://drive.google.com/file/d/18IM48_9NyS_xjB2ThfAVhe7voehf3pkq/view?usp=sharing">resumelink</a></p>
 	          </div>
           </div>
 
