--- a/index.html
+++ b/index.html
@@ -540,6 +540,20 @@
 			</div>
 		  </div>
 		  <div class="row d-flex">
+						<!-- Project 4 -->
+						<div class="col-md-4 d-flex ftco-animate">
+							<div class="blog-entry justify-content-end">
+							  <a class="block-20 zoom-effect" style="background-image: url('images/oc.png');">
+							  </a>
+							  <div class="text mt-3 float-right d-block">
+								<h3 class="heading"><a>Olympic 2024 Insights </a></h3>
+								<p>Executed a comprehensive analysis of Olympic athletes’ performance data, leading to a 35% improvement in tracking key metrics. This tracking facilitated more strategic decisions, ultimately boosting medal outcomes by 20%.</p>
+								<div class="button-container">
+								  <button class="view-project-btn" data-modal="modal1">See My Work</button>
+								</div>
+							  </div>
+							</div>
+						  </div>
 			<!-- Project 1 -->
 			<div class="col-md-4 d-flex ftco-animate">
 			  <div class="blog-entry justify-content-end">
@@ -589,6 +603,45 @@
 		  </div>
 		</div>
 	  
+		<!-- Modal 4 -->
+		<div id="modal1" class="modal">
+			<div class="modal-content">
+			  <span class="close-btn">&times;</span>
+			  <h2>Olympic 2024 Insights Data Analysis</h2>
+			  <h3 class="modal-subtitle">Olympic 2024 Insights Data Analysis</h3>
+			  <div class="project-info">
+				  <h4>Project Information:</h4>
+				  <p><strong>Used Tools:</strong> [Power BI | Python | Excel | Dax | Figma | Canva]</p>
+				  <p><strong>Description:</strong> Executed a comprehensive analysis of Olympic athletes performance data, leading to a 35% improvement in tracking key metrics. This tracking facilitated more strategic decisions, ultimately boosting medal outcomes by 20%.
+					  </p>
+				</div>
+				<div class="cta-buttons">
+				  <a href="https://github.com/KMNaim/Olympic-2024-Insight-Project" class="btn">
+					<i class="fab fa-linkedin"></i> Engagement Details
+				  </a>
+				  <a href="https://github.com/KMNaim/Olympic-2024-Insight-Project" class="btn">
+					<i class="fab fa-github"></i> GitHub Repository
+				  </a>
+				</div>
+			  <!-- Modal Content for Project 4 -->
+			  <div class="image-slider project-slider">
+				<div><img src="images/o1.png" alt="Project Snapshot 1"></div> <br>
+				<div><img src="images/o2.png" alt="Project Snapshot 2"></div> <br>
+				<div><img src="images/o3.png" alt="Project Snapshot 3"></div> <br>
+				<div><img src="images/o4.png" alt="Project Snapshot 1"></div> <br>
+				<div><img src="images/o5.png" alt="Project Snapshot 2"></div> <br>
+				<div><img src="images/o6.png" alt="Project Snapshot 3"></div> <br>
+				<!-- Add more images as needed -->
+			  </div>
+			  <h3 class="modal-subtitle"> <center><b>Live Interactive Dashboard</b></center></h3>
+			  <div class="powerbi-container">
+				<iframe src="https://app.powerbi.com/reportEmbed?reportId=0f8f4963-d10f-47b4-9fac-e4cf81cd1b91&autoAuth=true&ctid=2b44a3e8-bec9-431d-93ab-e78ecd5af477
+				" frameborder="0" allowFullScreen="true"></iframe>
+			  </div>
+  
+			</div>
+		  </div>
+
 		<!-- Modal 1 -->
 		<div id="modal1" class="modal">
 		  <div class="modal-content">
